// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDetailWidget renders a inline widget 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      aria-label="Some widget"
      class="StyledBox-sc-13pk1d4-0 dtEuhy"
    >
      <header
        class="StyledBox-sc-13pk1d4-0 udZMu ClusterDetailWidget__StyledCardHeader-sc-15uj98x-0 kdcGNg"
      >
        <span
          class="StyledText-sc-1sadyjn-0 jMNiKo"
        >
          Some widget
        </span>
      </header>
      <div
        class="StyledBox-sc-13pk1d4-0 btqjme"
      >
        <span
          class="StyledText-sc-1sadyjn-0 GogVv"
        >
          Some content
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClusterDetailWidget renders a simple widget 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      aria-label="Some widget"
      class="StyledBox-sc-13pk1d4-0 dtEuhy"
    >
      <header
        class="StyledBox-sc-13pk1d4-0 bfnszE ClusterDetailWidget__StyledCardHeader-sc-15uj98x-0 kdcGNg"
      >
        <span
          class="StyledText-sc-1sadyjn-0 jMNiKo"
        >
          Some widget
        </span>
      </header>
      <div
        class="StyledBox-sc-13pk1d4-0 btqjme"
      >
        <span
          class="StyledText-sc-1sadyjn-0 GogVv"
        >
          Some content
        </span>
      </div>
    </div>
  </div>
</div>
`;
